fix(forms): align forms in dialog labels.
Closes: telerik/kendo-theme-bootstrap#257

--- a/packages/bootstrap/scss/edit-form/_theme.scss
+++ b/packages/bootstrap/scss/edit-form/_theme.scss
@@ -1,1 +1,5 @@
-@include exports("edit-form/theme") {}
+@include exports("edit-form/theme") {
+	.k-edit-label {
+		padding: add-two($padding-y, -$input-border-width) 0;
+	}
+}
